# chasma

./: .cursorignore  AGENTS.md  ARCHITECTURE.md  BEVY_REFERENCE.md  Cargo.toml  Chasma Design.xlsx  Chasma Design.xlsx.bak  DESIGN.md  ROADMAP.md  _probe_albedo.rs  b3_err.txt  b3_err2.txt  run_err.txt  run_err2.txt
ADRs/: ADR-001-coordinate-model.md  ADR-002-chunk-model.md  ADR-003-terrain-pipeline.md  ADR-004-renderer-policy.md  ADR-005-query-api-v1.md  ADR-006-chunk-grid-dimensionality.md  ADR-007-application-and-layer-composition.md  ADR-008-terrain-data-storage-and-heightfield-model.md  ADR-009-terrain-import-mechanism.md  ADR-010-terrain-runtime-layer-boundaries.md  ADR-011-pre-chunked-terrain-asset-format.md  ADR-012-chunk-loading-and-streaming.md  ADR-013-terrain-mesh-generation-and-lod.md  ADR-014-camera-layer-boundaries.md  ADR-015-doodad-data-ownership.md  ADR-016-doodad-catalog-definitions.md  ADR-017-doodad-authoring-and-placement.md  ADR-018-procedural-doodad-generation.md  ADR-019-procedural-doodad-materialization.md  ADR-020-doodad-exclusion-enforcement.md  ADR-021-doodad-terrain-validation.md  ADR-022-terrain-placement-finalization.md  ADR-023-doodad-runtime-layer.md  ADR-024-biome-mask-authority.md  ADR-025-biome-aware-doodad-placement.md  ADR-026-skybox-foundation.md  ADR-027-unit-data-ownership.md  ADR-028-unit-runtime-layer.md  ADR-029-unit-terrain-grounding.md  ADR-030-unit-orders-and-straight-line-movement.md  ADR-031-doodad-obstacles-and-unit-blocking.md  ADR-032-chunk-grid-navigation.md  ADR-033-player-unit-control.md  ADR-034-multi-unit-selection-system.md  ADR-035-unit-formation-system.md  ADR-036-unit-steering-and-cohesion-system.md  ADR-037-unit-movement-feel-and-stabilization-layer.md  ADR-038-intent-based-client-architecture.md  ADR-039-intent-execution-and-debug-visualization-layer.md  ADR-040-gameplay-ui-layer-architecture.md  (+90 more)
docs/: animation-authoring.md  building-catalog.md  dev-mode.md  item-authoring.md  items-inventory-final-audit.md  navigation-blueprint.md  occupancy-authoring.md  presentation-dv3.md
logs/: asset_sizing_report.md  b3_test_errors.txt  navigation_blueprint_report.md
src/: lib.rs  main.rs
tools/: fix_b3_combat.py  fix_b3_imports.py  fix_b3_move_doodad.py  fix_b3_passability_inline.py  fix_b3_tests.py  fix_b3_tick.py  inspect_glb.py  (+1 more)
(+7604 files in other folders)
