[package]
name = "chasma"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
exr = { version = "1.74.0", optional = true }

[features]
default = []
# Offline terrain import/preprocessing (ADR-009): monolithic EXR heightfield
# decoding and partitioning into per-chunk world data. This is not part of the
# runtime terrain load path, so it is opt-in and keeps `exr` out of default builds.
terrain-import = ["dep:exr"]
