[package]
name = "chasma"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
exr = { version = "1.74.0", optional = true }
png = { version = "0.17.16", optional = true }
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = []
# Offline terrain import/preprocessing (ADR-009): monolithic EXR heightfield
# decoding and partitioning into per-chunk world data. This is not part of the
# runtime terrain load path, so it is opt-in and keeps `exr` out of default builds.
terrain-import = ["dep:exr", "dep:png"]
# Developer preview scene (camera/light + synthetic terrain). Composition only;
# not part of the core runtime layers (ADR-007, ADR-010).
dev = []
