[package]
name = "chasma"
version = "0.1.0"
edition = "2024"
default-run = "chasma"

[[bin]]
name = "merge_skybox_cubemap"
path = "src/bin/merge_skybox_cubemap.rs"

[dependencies]
bevy = "0.18"
calamine = { version = "0.26.1", optional = true }
gltf = { version = "1.4.1", optional = true }
exr = { version = "1.74.0", optional = true }
png = "0.17.16"
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
rust_xlsxwriter = "0.79.4"

[features]
default = []
# Offline doodad definition import from Excel (R6). Not linked in default builds.
data-import = ["dep:calamine", "dep:gltf"]
# Offline terrain import/preprocessing (ADR-009): monolithic EXR heightfield
# decoding and partitioning into per-chunk world data. This is not part of the
# runtime terrain load path, so it is opt-in and keeps `exr` out of default builds.
terrain-import = ["dep:exr"]
# Developer preview scene (camera/light + synthetic terrain). Composition only;
# not part of the core runtime layers (ADR-007, ADR-010).
dev = ["data-import"]
